fixed some html source code alignement and moved the games table, so it's flush left with the rest of the test

--- a/css/standard.css
+++ b/css/standard.css
@@ -485,6 +485,7 @@ ul.tricks li div div span.comment span{
 
 div.user ul {
   list-style:none;
+  padding: 0px;
 }
 
 div.user ul li {
